initial commit.  working game of life

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build:wasm": "cd rust-wasm-lib && wasm-pack build --target web",
+    "build": "npm run build:wasm && remix vite:build",
+    "dev": "npm run build:wasm && remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
